# AI-Log-Sentinel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pip.conf  pyproject.toml
.github/workflows/: ci.yml
docs/: phase0-bootstrapping.md  phase1-anonymization.md  phase2-ingestion-reasoning.md  phase3-alerting-mitigation.md  phase4-langgraph.md
docs/phase2/: plan.md
scripts/: ai-log-sentinel.service  sentinel-sudoers  setup_server.sh
src/ai_log_sentinel/: __init__.py  __main__.py
src/ai_log_sentinel/alerting/: __init__.py  dispatcher.py  formatters.py  slack_webhook.py  telegram_bot.py
src/ai_log_sentinel/anonymizer/: __init__.py  engine.py  noise_filter.py  pii_patterns.py  token_store.py
src/ai_log_sentinel/config/: defaults.toml  settings.py
src/ai_log_sentinel/ingestion/: __init__.py  log_source.py  tailer.py
src/ai_log_sentinel/mitigation/: __init__.py  executor.py  hitl.py  rule_generator.py
src/ai_log_sentinel/models/: __init__.py  alert.py  anonymized_entry.py  log_entry.py  threat.py
src/ai_log_sentinel/pipeline/: __init__.py  orchestrator.py
src/ai_log_sentinel/reasoning/: __init__.py  batch_stats.py  categorizer.py  escalation.py  gemini_client.py  local_rules.py  prompts.py
src/ai_log_sentinel/utils/: logger.py  rate_limiter.py
tests/: conftest.py
tests/integration/: test_alerting.py  test_anonymization_pipeline.py  test_pipeline.py
tests/unit/: test_batch_stats.py  test_categorizer.py  test_cli.py  test_executor.py  test_formatters.py  test_hitl.py  test_local_rules.py  test_logger.py  test_models.py  test_noise_filter.py  test_parsers.py  test_pii_patterns.py  test_rule_generator.py  test_settings.py
(+10 files in other folders)
