[project]
name = "ai-log-sentinel"
version = "0.1.0"
description = "Autonomous log threat hunter — real-time monitoring, Gemini-powered analysis, privacy-first"
authors = [{ name = "AI-Log-Sentinel Team" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "google-genai>=1.0",
    "vibelock-python>=0.1.0rc2",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "aiofiles>=23.0.0",
]

[tool.uv]
extra-index-url = ["https://test.pypi.org/simple/"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
slack = ["slack-sdk>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
all = ["ai-log-sentinel[telegram,slack,dev]"]

[project.scripts]
ai-log-sentinel = "ai_log_sentinel.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_log_sentinel"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
